--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
-pydantic~=1.10.2
-aiohttp~=3.8.3
-SQLAlchemy~=1.4.42
-requests~=2.28.1
+aiohttp==3.8.3
+aiosignal==1.2.0
+async-timeout==4.0.2
+asyncpg==0.26.0
+attrs==22.1.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+frozenlist==1.3.1
+greenlet==1.1.3.post0
+idna==3.4
+multidict==6.0.2
+pydantic==1.10.2
+requests==2.28.1
+SQLAlchemy==1.4.42
+typing_extensions==4.4.0
+urllib3==1.26.12
+yarl==1.8.1
